--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <Label Content="Label" HorizontalAlignment="Left" Margin="212,119,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
