--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -5,9 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Supertetris"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="212,119,0,0" VerticalAlignment="Top"/>
-
-    </Grid>
+        Title="MainWindow" Height="550" Width="450">
+    <Grid/>
 </Window>
