--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -5,8 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Supertetris"
         mc:Ignorable="d"
-        Title="Supertetris" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="Supertetris" Height="550" Width="450">
+    <Grid/>
 </Window>
