Commit zum fixen

--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -5,6 +5,6 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Supertetris"
         mc:Ignorable="d"
-        Title="Supertetris" Height="550" Width="450">
+        Title="MainWindow" Height="550" Width="450">
     <Grid/>
 </Window>
