--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="550" Width="450">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="522" Stroke="Black" VerticalAlignment="Top" Width="287"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="522" Stroke="#FF404040" VerticalAlignment="Top" Width="287"/>
     </Grid>
 </Window>
