--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -1,16 +1,52 @@
 ﻿<Window x:Class="Supertetris.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Supertetris"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="500">
-    <Grid>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="522" Stroke="#FF404040" VerticalAlignment="Top" Width="300
-                   "/>
-        <Button x:Name="btn_Pause" Content="Pause" HorizontalAlignment="Left" Margin="300,370,0,0" VerticalAlignment="Top" Width="172" Height="50" FontFamily="Impact" FontSize="20" Background="White" BorderBrush="White"/>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="80" Margin="315,10,0,0" VerticalAlignment="Top" Width="157"/>
-        <Image Margin="324,420,35,0.5" Source="Image1.png" Stretch="Fill"/>
-    </Grid>
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="MainWindow" Height="570" Width="525"
+    KeyDown = "HandleKeyDown" 
+    Initialized = "MainWindow_Initilized" Background ="LawnGreen">
+
+    <DockPanel LastChildFill="False">
+        <StackPanel DockPanel.Dock="Right" Width="127">
+            <Label Content="Label" Height="56" Name="Scores" FontSize="28" FontWeight="Bold" />
+            <Label Content="Label" Height="56" Name="Lines" FontSize="28" FontWeight="Bold"/>
+        </StackPanel>
+        <Grid Name="MainGrid" Height="500" Width="250">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+        </Grid>
+    </DockPanel>
 </Window>
