--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -1,53 +1,6 @@
 ﻿<Window x:Class="Supertetris.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="MainWindow" Height="570" Width="525"
-    KeyDown = "HandleKeyDown" 
-    Initialized = "MainWindow_Initilized" Background ="LightBlue">
-
-    <DockPanel LastChildFill="False">
-        <StackPanel Name="StackLabel" DockPanel.Dock="Right" Width="127">
-            <Label Content="Name" Height="56" Name="Username" FontSize="28" FontWeight="Bold" />
-            <Label Content="0" Height="56" Name="Scores" FontSize="28" FontWeight="Bold" />
-            <Label Content="Label" Height="56" Name="Lines" FontSize="28" FontWeight="Bold"/>
-        </StackPanel>
-        <Grid Name="MainGrid" Height="500" Width="250">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-        </Grid>
-    </DockPanel>
+    Title="MainWindow" Height="570" Width="525" Background ="LightBlue">
+    <Button Content="Spiel starten" HorizontalAlignment="Left" Margin="164,322,0,0" VerticalAlignment="Top" Width="197" Height="72" Click="Button_Click"/>
 </Window>
