--- a/Supertetris/Supertetris/MainWindow.xaml
+++ b/Supertetris/Supertetris/MainWindow.xaml
@@ -1,6 +1,6 @@
 ﻿<Window x:Class="Supertetris.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="MainWindow" Height="570" Width="525" Background ="LightBlue">
-    <Button Content="Spiel starten" HorizontalAlignment="Left" Margin="164,322,0,0" VerticalAlignment="Top" Width="197" Height="72" Click="Button_Click"/>
+    Title="MainWindow" Height="570" Width="525" Background ="#FFFF6255">
+    <Button Content="Spiel starten" HorizontalAlignment="Left" Margin="164,322,0,0" VerticalAlignment="Top" Width="197" Height="72" Click="Button_Click" Background="#FF2C2C2C" Foreground="White" BorderBrush="#FF2C2C2C"/>
 </Window>
